# ChangeLog for virtual/xmwde
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xmwde-0_p20120510-r1 (17 Sep 2012)
*xmwde-0_p20120918 (17 Sep 2012)

  17 Sep 2012; Michael Weber <xmw@gentoo.org> +xmwde-0_p20120510-r1.ebuild,
  +xmwde-0_p20120918.ebuild, -Manifest, -xmwde-0_p20120510.ebuild:
  Version bump optional mplayer2, no conkyforecast

*xmwde-0_p20120510 (10 May 2012)

  10 May 2012; Michael Weber <xmw@gentoo.org> -xmwde-0_p20120304.ebuild,
  -xmwde-0_p20120505.ebuild, +xmwde-0_p20120510.ebuild:
  Version bump, gnome-screenshot -> scrot

*xmwde-0_p20120505 (05 May 2012)

  05 May 2012; Michael Weber <xmw@gentoo.org> xmwde-0_p20120304.ebuild,
  +xmwde-0_p20120505.ebuild, metadata.xml:
  Version bump, gnome-extra/gnome-utils -> media-gfx/gnome-screenshot

*xmwde-0_p20120304 (04 Mar 2012)

  04 Mar 2012; Michael Weber <xmw@gentoo.org> -xmwde-0_p20120214.ebuild,
  +xmwde-0_p20120304.ebuild:
  Add USE 256-color,xft to x11-terms/rxvt-unicode.

*xmwde-0_p20120214 (14 Feb 2012)

  14 Feb 2012; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110819.ebuild,
  +xmwde-0_p20120214.ebuild:
  Version bump to include virtual/xmwce

*xmwde-0_p20110819 (19 Aug 2011)

  19 Aug 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110816.ebuild,
  +xmwde-0_p20110819.ebuild:
  removed gnome-terminal

*xmwde-0_p20110816 (16 Aug 2011)

  16 Aug 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110714.ebuild,
  +xmwde-0_p20110816.ebuild:
  Added x11-misc/trayer-srg

*xmwde-0_p20110714 (14 Jul 2011)

  14 Jul 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110601.ebuild,
  -xmwde-0_p20110711.ebuild, -xmwde-0_p20110713.ebuild,
  +xmwde-0_p20110714.ebuild:
  version bump, added xdotool for windowbounce

*xmwde-0_p20110713 (13 Jul 2011)

  13 Jul 2011; Michael Weber <xmw@gentoo.org> +xmwde-0_p20110713.ebuild:
  version bump, added xclip for clip2goog

*xmwde-0_p20110711 (11 Jul 2011)

  11 Jul 2011; Michael Weber <xmw@gentoo.org> +xmwde-0_p20110711.ebuild: